// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions > Analysis > Regional deleteRegionalAnalysis should work 1`] = `
Object {
  "payload": "12321a",
  "type": "delete regional analysis",
}
`;

exports[`Actions > Analysis > Regional setActiveRegionalAnalyses should work 1`] = `
Object {
  "type": "set active regional analyses",
}
`;

exports[`Actions > Analysis > Regional setMinimumImprovementProbability should work 1`] = `
Object {
  "payload": 0.42,
  "type": "set minimum improvement probability",
}
`;

exports[`Actions > Analysis > Regional setRegionalAnalyses should work 1`] = `
Object {
  "payload": Array [
    Object {
      "bundleId": "5678",
      "cutoffMinutes": 60,
      "grid": "Jobs_total",
      "height": 300,
      "id": "abcd",
      "name": "ANALYSIS 1",
      "north": 20024,
      "request": Object {
        "accessModes": "WALK",
        "bikeSafe": 1,
        "bikeSlope": 1,
        "bikeSpeed": 4.166666666666667,
        "bikeTime": 1,
        "bikeTrafficStress": 4,
        "carSpeed": 20,
        "date": "2016-01-16",
        "directModes": "WALK",
        "egressModes": "WALK",
        "fromTime": 25200,
        "maxBikeTime": 20,
        "maxCarTime": 45,
        "maxRides": 4,
        "maxWalkTime": 20,
        "minBikeTime": 10,
        "minCarTime": 10,
        "monteCarloDraws": 200,
        "reachabilityThreshold": 0,
        "streetTime": 90,
        "suboptimalMinutes": 5,
        "toTime": 32400,
        "transitModes": "BUS,TRAM,RAIL,SUBWAY",
        "walkSpeed": 1.3888888888888888,
      },
      "scenarioId": "1234",
      "travelTimePercentile": -1,
      "variant": 0,
      "west": 20015,
      "width": 300,
      "zoom": 9,
    },
    Object {
      "bundleId": "5678",
      "cutoffMinutes": 60,
      "grid": "Jobs_total",
      "height": 300,
      "id": "efgh",
      "name": "ANALYSIS 2",
      "north": 20024,
      "request": Object {
        "accessModes": "WALK",
        "bikeSafe": 1,
        "bikeSlope": 1,
        "bikeSpeed": 4.166666666666667,
        "bikeTime": 1,
        "bikeTrafficStress": 4,
        "carSpeed": 20,
        "date": "2016-01-16",
        "directModes": "WALK",
        "egressModes": "WALK",
        "fromTime": 25200,
        "maxBikeTime": 20,
        "maxCarTime": 45,
        "maxRides": 4,
        "maxWalkTime": 20,
        "minBikeTime": 10,
        "minCarTime": 10,
        "monteCarloDraws": 200,
        "reachabilityThreshold": 0,
        "streetTime": 90,
        "suboptimalMinutes": 5,
        "toTime": 32400,
        "transitModes": "BUS,TRAM,RAIL,SUBWAY",
        "walkSpeed": 1.3888888888888888,
      },
      "scenarioId": "4321",
      "travelTimePercentile": 42,
      "variant": 1,
      "west": 20015,
      "width": 300,
      "zoom": 9,
    },
  ],
  "type": "set regional analyses",
}
`;

exports[`Actions > Analysis > Regional setRegionalAnalysisGrids should work 1`] = `
Object {
  "type": "set regional analysis grids",
}
`;
